# platform_system_core

./: .clang-format  .clang-format-2  .clang-format-4  Android.bp  Android.mk  CleanSpec.mk  OWNERS  PREUPLOAD.cfg  README  README.md  TEST_MAPPING  ThirdPartyProject.prop  abol-patch-1  base  libbacktrace  liblog  libprocinfo  libunwindstack  logcat  logd  logwrapper  patch.txt  platform_tools_tool_version.mk  rustfmt.toml
adb/: .clang-format  Android.bp  Android.mk  CPPLINT.cfg  NOTICE  OVERVIEW.TXT  OWNERS  README.md  SERVICES.TXT  SOCKET-ACTIVATION.txt  SYNC.TXT  adb.bash  adb.c  adb.cpp  adb.h  adb_auth.c  adb_auth.cpp  adb_auth.h  adb_auth_client.c  adb_auth_client.cpp  adb_auth_host.c  adb_auth_host.cpp  adb_client.c  adb_client.cpp  adb_client.h  adb_integration_test_adb.xml  adb_integration_test_device.xml  adb_io.cpp  adb_io.h  adb_io_test.cpp  adb_listeners.c  adb_listeners.cpp  adb_listeners.h  adb_listeners_test.cpp  adb_main.c  adb_main.cpp  adb_mdns.h  adb_test.xml  adb_trace.cpp  adb_trace.h  (+122 more)
adf/: Android.mk  OWNERS
atrace/: Android.mk  atrace.c
base/: Android.bp  Android.mk  Blueprints  CPPLINT.cfg  chrono_utils.cpp  chrono_utils_test.cpp  cmsg.cpp  expected_test.cpp  file.cpp  file_test.cpp  liblog_symbols.cpp  liblog_symbols.h  (+23 more)
init/libprefetch/prefetch/: Android.bp  Cargo.toml  OWNERS  prefetch.rc
init/libprefetch/prefetch/src/: args.rs  error.rs  format.rs  lib.rs  main.rs  replay.rs
init/libprefetch/prefetch/src/arch/: android.rs
init/libprefetch/prefetch/src/args/: args_argh.rs
init/libprefetch/prefetch/src/tracer/: mem.rs  mod.rs
(+4389 files in other folders)
