[package]
name = "prefetch"
version = "0.1.0"
edition = "2018"
default-run = "prefetch"

[lib]
name = "prefetch_rs"
path = "src/lib.rs"

[[bin]]
name = "prefetch"
path = "src/main.rs"

[features]
default = ["use_argh"]
use_argh = ["argh"]

[dependencies]
argh = { version = "0.1.10", optional = true }
chrono = { version = "=0.4.19", features = ["serde"] }
crc32fast = "1.2.1"
csv = "=1.1.6"
libc = "0.2.82"
log = "=0.4.14"
lru-cache = "0.1.2"
memchr = "=2.3.4"
nix = {version = "0.28", features = ["fs", "time", "feature", "mman", "uio"]}
proc-macro2 = "=1.0.26"
quote = "=1.0.9"
rand = "0.8.3"
rayon = "=1.5.0"
rayon-core = "=1.9.0"
regex = "1.4.5"
serde = { version = "*", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "=1.0.123"
serde_json = "=1.0.62"
thiserror = "=1.0.24"
thiserror-impl = "1.0.24"
walkdir = "2.3.2"

# crates required for android builds
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"

# crates not present in android builds
[target.'cfg(not(target_os = "android"))'.dependencies]
bincode = "=0.9.0"
env_logger = "=0.8.4"
tempfile = "2.2.0"
